initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from e:\Pycham\PPL2now\initial\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'::'", "'..'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Class'", "'Self'", 
                     "'{'", "'}'", "'('", "')'", "'==.'", "'+.'", "'=='", 
                     "'!='", "'<='", "'>='", "'>'", "'<'", "','", "';'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'.'", "'['", "']'", "':'", "'Val'", "'Var'", 
                     "'Constructor'", "'Destructor'", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Null'", "'New'", "'In'", "'By'", "'Return'" ]

    symbolicNames = [ "<INVALID>", "DOUBLECOLON", "DOUBLEDOT", "INTLIT1", 
                      "INTLIT0", "FLOATLIT", "STRINGLIT", "BOOLLIT", "CLASS", 
                      "SELF", "LC", "RC", "LB", "RB", "STREQUAL", "STRCAT", 
                      "EQUAL", "NOTEQUAL", "SMALLOREQUAL", "LARGEOREQUAL", 
                      "LARGE", "SMALLER", "COMMA", "SEMI", "ASSIGN", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", "DOT", 
                      "LSB", "RSB", "COLON", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", "INT", 
                      "FLOAT", "BOOLEAN", "STRING", "NULL", "NEW", "IN", 
                      "BY", "RETURN", "COMMENT", "SID", "ID", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_classdecls = 1
    RULE_classdecl = 2
    RULE_superclass = 3
    RULE_memberlist = 4
    RULE_member = 5
    RULE_attributedecl = 6
    RULE_vardecl = 7
    RULE_varlist = 8
    RULE_idnamelist = 9
    RULE_typename = 10
    RULE_value = 11
    RULE_idname = 12
    RULE_methoddecl = 13
    RULE_paralist = 14
    RULE_constructor = 15
    RULE_destructor = 16
    RULE_vardeclStatement = 17
    RULE_varliststmt = 18
    RULE_idlist = 19
    RULE_assignStatement = 20
    RULE_assignvar = 21
    RULE_expAssignVar = 22
    RULE_ifStmtatement = 23
    RULE_elsePart = 24
    RULE_forinStatement = 25
    RULE_breakStatement = 26
    RULE_continueStatement = 27
    RULE_returnStatement = 28
    RULE_methodInvoStatement = 29
    RULE_block_stmt = 30
    RULE_statements = 31
    RULE_statement = 32
    RULE_expression = 33
    RULE_expression1 = 34
    RULE_expression2 = 35
    RULE_expression3 = 36
    RULE_expression4 = 37
    RULE_expression5 = 38
    RULE_expression6 = 39
    RULE_expression7a = 40
    RULE_expression7b = 41
    RULE_index_operators = 42
    RULE_expression8 = 43
    RULE_expression9 = 44
    RULE_expression10 = 45
    RULE_objectCreate = 46
    RULE_listOfExpressions = 47
    RULE_expression11 = 48
    RULE_arraytypedecl = 49
    RULE_typenamearray = 50
    RULE_arrayofvalue = 51

    ruleNames =  [ "program", "classdecls", "classdecl", "superclass", "memberlist", 
                   "member", "attributedecl", "vardecl", "varlist", "idnamelist", 
                   "typename", "value", "idname", "methoddecl", "paralist", 
                   "constructor", "destructor", "vardeclStatement", "varliststmt", 
                   "idlist", "assignStatement", "assignvar", "expAssignVar", 
                   "ifStmtatement", "elsePart", "forinStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "methodInvoStatement", 
                   "block_stmt", "statements", "statement", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7a", "expression7b", 
                   "index_operators", "expression8", "expression9", "expression10", 
                   "objectCreate", "listOfExpressions", "expression11", 
                   "arraytypedecl", "typenamearray", "arrayofvalue" ]

    EOF = Token.EOF
    DOUBLECOLON=1
    DOUBLEDOT=2
    INTLIT1=3
    INTLIT0=4
    FLOATLIT=5
    STRINGLIT=6
    BOOLLIT=7
    CLASS=8
    SELF=9
    LC=10
    RC=11
    LB=12
    RB=13
    STREQUAL=14
    STRCAT=15
    EQUAL=16
    NOTEQUAL=17
    SMALLOREQUAL=18
    LARGEOREQUAL=19
    LARGE=20
    SMALLER=21
    COMMA=22
    SEMI=23
    ASSIGN=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    NOT=30
    AND=31
    OR=32
    DOT=33
    LSB=34
    RSB=35
    COLON=36
    VAL=37
    VAR=38
    CONSTRUCTOR=39
    DESTRUCTOR=40
    BREAK=41
    CONTINUE=42
    IF=43
    ELSEIF=44
    ELSE=45
    FOREACH=46
    TRUE=47
    FALSE=48
    ARRAY=49
    INT=50
    FLOAT=51
    BOOLEAN=52
    STRING=53
    NULL=54
    NEW=55
    IN=56
    BY=57
    RETURN=58
    COMMENT=59
    SID=60
    ID=61
    WS=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    ERROR_TOKEN=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecls(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.classdecls()
            self.state = 105
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecl(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclContext,0)


        def classdecls(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecls




    def classdecls(self):

        localctx = D96Parser.ClassdeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecls)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.classdecl()
                self.state = 108
                self.classdecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.classdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LC(self):
            return self.getToken(D96Parser.LC, 0)

        def RC(self):
            return self.getToken(D96Parser.RC, 0)

        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def superclass(self):
            return self.getTypedRuleContext(D96Parser.SuperclassContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecl




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(D96Parser.CLASS)
            self.state = 114
            self.match(D96Parser.ID)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 115
                self.superclass()


            self.state = 118
            self.match(D96Parser.LC)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.SID, D96Parser.ID]:
                self.state = 119
                self.memberlist()
                pass
            elif token in [D96Parser.RC]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 123
            self.match(D96Parser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuperclassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_superclass




    def superclass(self):

        localctx = D96Parser.SuperclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_superclass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(D96Parser.COLON)
            self.state = 126
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memberlist




    def memberlist(self):

        localctx = D96Parser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memberlist)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.member()
                self.state = 129
                self.memberlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributedecl(self):
            return self.getTypedRuleContext(D96Parser.AttributedeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(D96Parser.MethoddeclContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.attributedecl()
                pass
            elif token in [D96Parser.SID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.methoddecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attributedecl




    def attributedecl(self):

        localctx = D96Parser.AttributedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attributedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.vardecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(D96Parser.VarlistContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def idnamelist(self):
            return self.getTypedRuleContext(D96Parser.IdnamelistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typename(self):
            return self.getTypedRuleContext(D96Parser.TypenameContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_vardecl




    def vardecl(self):

        localctx = D96Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                _la = self._input.LA(1)
                if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 143
                self.idname()
                self.state = 144
                self.varlist()
                self.state = 145
                self.value()
                self.state = 146
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                _la = self._input.LA(1)
                if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 149
                self.idnamelist()
                self.state = 150
                self.match(D96Parser.COLON)
                self.state = 151
                self.typename()
                self.state = 152
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(D96Parser.VarlistContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typename(self):
            return self.getTypedRuleContext(D96Parser.TypenameContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_varlist




    def varlist(self):

        localctx = D96Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varlist)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(D96Parser.COMMA)
                self.state = 157
                self.idname()
                self.state = 158
                self.varlist()
                self.state = 159
                self.value()
                self.state = 160
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(D96Parser.COLON)
                self.state = 163
                self.typename()
                self.state = 164
                self.match(D96Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdnamelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def idnamelist(self):
            return self.getTypedRuleContext(D96Parser.IdnamelistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_idnamelist




    def idnamelist(self):

        localctx = D96Parser.IdnamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idnamelist)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.idname()
                self.state = 169
                self.match(D96Parser.COMMA)
                self.state = 170
                self.idnamelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.idname()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(D96Parser.STRING, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def arraytypedecl(self):
            return self.getTypedRuleContext(D96Parser.ArraytypedeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_typename




    def typename(self):

        localctx = D96Parser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typename)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(D96Parser.INT)
                pass
            elif token in [D96Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(D96Parser.FLOAT)
                pass
            elif token in [D96Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(D96Parser.BOOLEAN)
                pass
            elif token in [D96Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.match(D96Parser.STRING)
                pass
            elif token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 179
                self.match(D96Parser.ID)
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 180
                self.arraytypedecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(D96Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_value




    def value(self):

        localctx = D96Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SID(self):
            return self.getToken(D96Parser.SID, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_idname




    def idname(self):

        localctx = D96Parser.IdnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_idname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            _la = self._input.LA(1)
            if not(_la==D96Parser.SID or _la==D96Parser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethoddeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(D96Parser.ParalistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_methoddecl




    def methoddecl(self):
